Ui navigation and communication improvement. Save activity state logic Added: Navigator EventBus (logic and event)
Bug - onOrientationChange - SportPickDialog sendEvent